--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.13",
     "@mui/x-date-pickers": "^6.19.6",
     "@reduxjs/toolkit": "^2.2.1",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.10",
     "mongoose": "^8.2.2",
     "next": "14.1.3",
