--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.10",
-    "mongoose": "^8.2.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0"
