--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.10",
+    "mongoose": "^8.2.3",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
